remove multiple regions from config (restricted to the Enterprise plan for Teams), remove deprecated name property

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "name": "topics-voting-app-api",
-  "regions": ["bru", "lhr"],
+  "regions": ["bru"],
   "version": 2,
   "builds": [
     { "src": "/api/*.js", "use": "@now/node" },
